@@ -116,6 +116,15 @@ archive.</p>
       error. <em>since Ant 1.8.0</em></td>
     <td valign="top" align="center">No, defaults to false</td>
   </tr>
+  <tr>
+    <td valign="top">stripAbsolutePathSpec</td>
+    <td valign="top">whether Ant should remove leading '/' or '\'
+      characters from the extracted file name before extracing it.
+      Note that this changes the entry's name before applying
+      include/exclude patterns and before using the nested mappers (if
+      any).  <em>since Ant 1.8.0</em></td>
+    <td valign="top" align="center">No, defaults to false</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>
